--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "simple-import-sort" // Plugin for sorting imports in file.
   ],
   "rules": {
+    "@typescript-eslint/no-empty-interface": "warn",
     "import/first": "warn",
     "import/newline-after-import": "warn",
     "import/no-duplicates": "error",
