--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "jest-environment-jsdom": "^28.1.1",
     "lint-staged": "^13.0.2",
     "prettier": "^2.7.1",
+    "snapshot-diff": "^0.10.0",
     "sort-package-json": "^1.57.0",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "^28.0.5",
